# silk-clouds

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  cloud_world.rs  compute.rs  graphics.rs  lib.rs  main.rs  marching_cubes.rs  mesh.rs  pentagon.rs  terrain.rs  texture.rs  triangle.rs  window.rs  world.rs
src/shaders/: chunk_render.wgsl  cloud_density.wgsl  compute.wgsl  marching_cubes.wgsl  shader.wgsl  terrain.wgsl  terrain_compute.wgsl  terrain_geometry.wgsl
src/shapes/: cube.rs  mod.rs  pentagon.rs  triangle.rs
