[package]
name = "nuage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.1"
flume = "0.11.0"
gif = "0.13.1"
log = "0.4.20"
nalgebra = "0.32.3"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
pollster = "0.3.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
